--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <!-- ===== 核心引擎 - 注意載入順序 ===== -->
     <!-- 1. 最基本的工具 -->
+    <script src="js/core/LoadingManager.js"></script>
     <script src="js/core/GameEngine.js"></script>
     <script src="js/core/AudioManager.js"></script>
     <script src="js/core/SceneManager.js"></script>
