--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>對話探索遊戲</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/minigame.css">
 </head>
 <body>
     <div id="game-wrapper">
